--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav>
             <ul class="nav-right-section">
                 <li>
-                    <a class="hover-underline-animation2" href="">Gmail</a>
+                    <a class="hover-underline-animation2" href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
                 </li>
                 <li>
-                    <a class="hover-underline-animation2" href="">Imágenes</a>
+                    <a class="hover-underline-animation2" href="https://www.google.cl/imghp?hl=es&authuser=0&ogbl">Imágenes</a>
                 </li>
                 <li class="menu-icon">
                     <a href=""></a>
@@ -54,22 +54,25 @@
 
     <footer>
         <ul class="footer-left">
-          <li>
-            <a class="hover-underline-animation" href="">Publicidad</a>
+            <li>
+                <a class="hover-underline-animation" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwja27qtjq_7AhVzIbkGHQssDrkQkNQCCBM&url=https%3A%2F%2Fabout.google%2F%3Futm_source%3Dgoogle-CL%26utm_medium%3Dreferral%26utm_campaign%3Dhp-footer%26fg%3D1&usg=AOvVaw0jCKHEedLgUi0EVFxRAckT">Sobre Google</a>
+              </li>
+            <li>
+            <a class="hover-underline-animation" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwja27qtjq_7AhVzIbkGHQssDrkQkdQCCBQ&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fes_cl%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw12_1gJ5Bl0Inwxy-AiE9KG">Publicidad</a>
           </li>
           <li>
-            <a class="hover-underline-animation" href="">Negocios</a>
+            <a class="hover-underline-animation" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwja27qtjq_7AhVzIbkGHQssDrkQktQCCBU&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K">Negocios</a>
           </li>
           <li>
-            <a class="hover-underline-animation" href="">Cómo funciona la búsqueda</a>
+            <a class="hover-underline-animation" href="https://google.com/search/howsearchworks/?fg=1">Cómo funciona la búsqueda</a>
           </li>  
         </ul>
         <ul class="footer-right">
             <li>
-                <a class="hover-underline-animation" href="">Privacidad</a>
+                <a class="hover-underline-animation" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwja27qtjq_7AhVzIbkGHQssDrkQ8awCCBY&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Fhl%3Des-CL%26fg%3D1&usg=AOvVaw0nmIoqOVq3Cs2KAYaU2oEm">Privacidad</a>
             </li>
             <li>
-                <a class="hover-underline-animation" href="">Condiciones</a>
+                <a class="hover-underline-animation" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwja27qtjq_7AhVzIbkGHQssDrkQ8qwCCBc&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Fhl%3Des-CL%26fg%3D1&usg=AOvVaw3DXShsWiDZJv2tohBZtwjI">Condiciones</a>
             </li>
             <li>
                 <a class="hover-underline-animation" href="">Preferencias</a>
